--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <!--
+  This is the file that will be served to anyone browsing to http://server-running-mongopop-server/
+  The by loading 'systemjs.config.js', Angular2 will replace the "my-app" element with the Mongopop
+  client application.
+  -->
+
   <head>
     <title>MongoPop</title>
     <meta charset="UTF-8">
@@ -20,6 +26,6 @@
   </head>
 
   <body>
-    <my-app>Loading MongoPop...</my-app>
+    <my-app>Loading MongoPop client app...</my-app>
   </body>
 </html>
