added loading of config into Angular client

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <!--
   This is the file that will be served to anyone browsing to http://server-running-mongopop-server/
-  The by loading 'systemjs.config.js', Angular2 will replace the "my-app" element with the Mongopop
+  Then, by loading 'systemjs.config.js', Angular2 will replace the "my-app" element with the Mongopop
   client application.
   -->
 
